gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/gag4269c.d
version https://git-lfs.github.com/spec/v1
oid sha256:daff29f4e7724796b9127ff4c95d3dcaf18f2877e1ca7b69b09f7be8c359979d
size 198
